--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "Movie Adda",
     "description": "All movies here",
     "stack": "container",
-    "logo": "",
+    "logo": "https://telegra.ph/file/fbf4efda024d766f755a4.jpg",
     "keywords": [
       "telegram",
       "auto-filter",
@@ -49,6 +49,8 @@
         },    
         "REQ_CHANNEL": {
             "required": true
+         "database_CHANNEL": {
+            "required": true   
         },
         "AUTH_USERS": {
             "description": "Username or ID of users to give access of inline search. Separate multiple users by space.\nLeave it empty if you don't want to restrict bot usage.",
